Closed Bug 818245 Opened 13 years ago Closed 13 years ago

Fix some warnings in Assembler-arm.cpp

Categories

(Core :: JavaScript Engine, defect, P4)

ARM
Android
defect

Tracking

()

RESOLVED FIXED
mozilla20
Tracking Status
firefox19 --- wontfix
firefox20 --- fixed

People

(Reporter: cpeterson, Assigned: cpeterson)

Details

Attachments

(2 files)

When compiling for Android, I see the following compiler warnings about comparing n integer (uintptr_t) with a pointer (NULL): js/src/ion/arm/Assembler-arm.cpp: In member function 'void js::ion::AutoFlushCache::update(uintptr_t, size_t)': js/src/ion/arm/Assembler-arm.cpp:2445: warning: NULL used in arithmetic js/src/ion/arm/Assembler-arm.cpp: In member function 'void js::ion::AutoFlushCache::flushAnyway()': js/src/ion/arm/Assembler-arm.cpp:2487: warning: NULL used in arithmetic
Attachment #688428 - Flags: review?(dvander)
Attachment #688428 - Flags: review?(dvander) → review+
Part 2: Also mark some Assembler-arm.cpp functions as static because they are only used within that source file.
Attachment #688431 - Flags: review?(dvander)
Comment on attachment 688431 [details] [diff] [review] part-2-make-functions-static.patch Review of attachment 688431 [details] [diff] [review]: ----------------------------------------------------------------- ::: js/src/ion/arm/Assembler-arm.cpp @@ +2320,1 @@ > bool instIsGuard(Instruction *inst, const PoolHeader **ph) nit, SpiderMonkey style is: static bool instIsGuard(... r=me if you also want to fix the capitalization (InstIsGuard, InstIsBNop, InstIsArtificialGuard)
Attachment #688431 - Flags: review?(dvander) → review+
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: