Bug 818245 - Part 1: Fix "NULL used in arithmetic" warnings in Assembler-arm.cpp. r=dvander